2021-02-21  7.0.11-2  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-2 GIT revision 18462:cd5b6fb4f:20210221

2021-02-21  7.0.11-1  <quetzlzacatenango@image...>
  * Clone properties from image stack.

2021-02-21  7.0.11-1  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-1 GIT revision 18456:4de21b7b4:20210221

2021-02-15  7.0.11-1  <quetzlzacatenango@image...>
  * fix EXR crash (reference
    https://github.com/ImageMagick/ImageMagick/issues/3242).

2021-02-13  7.0.11-0  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-0 GIT revision 18438:ff3ef50ab:20210213

2021-02-10  7.0.11-0  <quetzlzacatenango@image...>
  * bump minor version #
  * allow reading multichannel PSD files with 1 or 2 channels.
  * respect masks when computing SSIM metric (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3212).

2021-02-07  7.0.10-62  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-62 GIT revision 18418:f1e915f65:20210207

2021-02-01  7.0.10-62  <quetzlzacatenango@image...>
  * -trim not working as expected (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3172).
  * possible undefined behavior (reference
    https://github.com/ImageMagick/ImageMagick/issues/3195).
  * sanitize buggy ascender and descender values (reference
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=980202).

2021-01-30  7.0.10-61  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-61 GIT revision 18360:d3bec838c:20210130

2021-01-25  7.0.10-61  <quetzlzacatenango@image...>
  * dng:decode element in delegates.xml quoted incorrectly (reference
    https://github.com/ImageMagick/ImageMagick/issues/3156).
  * Extract GPS info from TIFF images (reference
    https://github.com/ImageMagick/ImageMagick/issues/3167).
  * Revert tieing MagickFloatType to double (reference
    https://github.com/ImageMagick/ImageMagick/pull/2832).
