@@ -1,6 +1,9 @@
 2021-02-21  7.0.11-2  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.11-2 GIT revision 18462:cd5b6fb4f:20210221
 
+2021-02-21  7.0.11-2  <quetzlzacatenango@image...>
+  * decode HEIC images in sRGB instead of YCbCr.
+
 2021-02-21  7.0.11-1  <quetzlzacatenango@image...>
   * Clone properties from image stack.
 
